# genome-grist

./: .gitignore  404.html  MANIFEST.in  Makefile  README.md  Snakefile  conf-p8808mo11.yml  conf-p8808mo9.yml  conf-private.yml  conf-twofoo-head.yml  conf.yml  count-vcf.py  env-minimap2.yml  env.yml  environment.yml  gather-p8808mo11.ipynb  gather-p8808mo9.ipynb  gather-podar.ipynb  gathergram.ipynb  generate-private-info.py  grab-genome.py  hash-upsetr-example.ipynb  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  snakemake.slurm
.github/workflows/: gh-pages.yml  run_tests.yml  test.yml
configuring/: index.html
doc/: configuring.md  index.md  output-guide.md  quickstart.md
docs/: README.md  _config.yml
docs/_site/: 404.html  data.json  index.html  search.html  sitemap.xml
docs/docs/: README.md  get_started.md
genome_grist/: Snakefile  __main__.py  combine_csvs.py  copy_local_genomes.py  copy_private_genomes.py  gather_split.py  genbank_genomes.py  make_info_file.py  prefetch_gather.py  remove_idents_from_manifest.py  report-taxonomy.py  subtract_gather.py  summarize_gather_hashes.py  summarize_mapping.py
genome_grist/conf/: Snakefile  defaults.conf  protein.smk  system.conf
genome_grist/env/: papermill.yml  sourmash.yml  sra.yml  wget.yml
genome_grist/notebooks/: __init__.py  gather-summary.ipynb  gathergram.ipynb  report-gather.ipynb  report-mapping.ipynb  report-sample-taxsum.ipynb  report-sample.ipynb  report-taxonomy.ipynb
inputs/: adapters.fa
output-guide/: index.html
outputs.test/: SRR5950647.info.yaml
outputs.test/gather/: SRR5950647.gather.csv  SRR5950647.genomes.info.csv  SRR5950647.prefetch.csv
outputs.test/leftover/: SRR5950647.summary.csv
outputs.test/mapping/: SRR5950647.summary.csv
quickstart/: index.html
scripts/: subtract-gather.py
search/: search_index.json
tests/: pytest_utils.py  test_snakemake.py  test_snakemake_errors.py
tests/test-data/: HSMA33MX-subset.conf  HSMA33MX-subset.genomes.accs.txt  HSMA33MX-subset.genomes.info.csv  HSMA33MX-subset.x.genbank.gather.csv  HSMA33MX-subset.x.genbank.gather.out  HSMA33MX-subset.x.genbank.matches.sig  HSMA33MX.conf  HSMA33MX.x.genbank.gather.csv  SRR5950647-genomes.info.csv  SRR5950647.conf  SRR5950647.subset.conf  SRR5950647_picklist.conf  SRR5950647_picklist.picklist.csv  SRR5950647_subset-nomatches.conf  SRR5950647_subset.conf  SRR5950647_subset.tax.csv  bad-1.conf  bad-2.conf  bad-3.conf  bad-4.conf  (+7 more)
(+36 files in other folders)
