[project]
name = "genome-grist"
description = "tools to support genome and metagenome analysis"
readme = "README.md"
requires-python = ">=3.12"
version = "0.10.0"
#classifiers = [
#]
authors = [
  { name="C. Titus Brown" },
  { name="Luiz Irber" },
  { name="N. Tessa Pierce-Ward" },
  { name="Taylor Reiter" },
]
dependencies = ["snakemake", "click>=7,<9", "lxml==4.9.3",
                "pandas>1,<3"]

# @CTB classifiers=CLASSIFIERS,

[project.scripts]
hello-world = "timmins:hello_world"
genome-grist = "genome_grist.__main__:main"

[project.optional-dependencies]
test = [
  "sourmash>=4.8.11,<5",
  "pytest>=6.2.4,<8.4.0",
  "pytest-dependency==0.5.1", # @CTB try 0.6.0"
]

[tool.setuptools]
packages = ["genome_grist"]

[metadata]
license = { text = "GNU Affero General Public License v3" }

# @CTB    entry_points={"console_scripts": ["genome-grist  = genome_grist.__main__:main"]},
#    include_package_data=True,
#    package_data={"genome_grist": ["Snakefile", "*.yml", "*.ipynb"]},
#    tests_require=["pytest", "pytest-dependency==0.5.1"],
#    long_description=long_description,
#    long_description_content_type="text/markdown",
