[project]
name = "genome-grist"
description = "tools to support genome and metagenome analysis"
readme = "README.md"
requires-python = ">=3.12"
version = "0.11.2"
authors = [
  { name="C. Titus Brown" },
  { name="Luiz Irber" },
  { name="N. Tessa Pierce-Ward" },
  { name="Taylor Reiter" },
]
dependencies = ["snakemake",
                "click>=7,<9",
                "lxml==5.3.1",
                "pandas>1,<3",
                "get-some-ncbi-genomes==0.3"]
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
genome-grist = "genome_grist.__main__:main"

[project.optional-dependencies]
test = [
  "sourmash>=4.9.0,<5",
  "pytest>=6.2.4,<8.5.0",
  "pytest-dependency==0.6.0", # @CTB try 0.6.0"
]

[tool.setuptools]
packages = ["genome_grist"]

[metadata]
license = { text = "GNU Affero General Public License v3" }
